--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
 			<version>1.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
