--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.camunda.consulting</groupId>
+	<groupId>com.camunda.consulting.simulator.simulator</groupId>
 	<artifactId>camunda-bpm-simulator</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
@@ -14,8 +14,6 @@
 
 	<properties>
 		<camunda.version>7.9.0</camunda.version>
-		<!-- Adjust if you want to use Camunda Enterprise Edition (EE): <camunda.version>7.9.0-ee</camunda.version> 
-			Make sure you also switch to EE repository below -->
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -65,14 +63,6 @@
 		</dependency>
 
 		<dependency>
-			<!-- Used to generate test coverage reports, see https://github.com/camunda/camunda-consulting/tree/master/snippets/camunda-bpm-process-test-coverage -->
-			<groupId>org.camunda.bpm.extension</groupId>
-			<artifactId>camunda-bpm-process-test-coverage</artifactId>
-			<version>0.3.2</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
 			<!-- use logback as logger -->
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
@@ -82,14 +72,12 @@
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<!-- apache commons logging => slf4j -->
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>1.7.25</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<!-- java util logging => slf4j -->
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
 			<version>1.7.25</version>
@@ -109,17 +97,4 @@
 		</dependency>
 
 	</dependencies>
-
-	<repositories>
-		<repository>
-			<id>camunda-bpm-nexus</id>
-			<name>Camunda Maven Repository</name>
-			<url>https://app.camunda.com/nexus/content/groups/public</url>
-		</repository>
-		<!-- enable this for EE dependencies (requires credentials in ~/.m2/settings.xml) 
-			<repository> <id>camunda-bpm-nexus-ee</id> <name>Camunda Enterprise Maven 
-			Repository</name> <url>https://app.camunda.com/nexus/content/repositories/camunda-bpm-ee</url> 
-			</repository> -->
-	</repositories>
-
 </project>
