--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,12 @@
 *.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+**/hs_err_pid*
 
 # maven
-/target/
+**/target/
 
 # Eclipse
-.project
-.settings
-.classpath
+**/.project
+**/.settings
+**/.classpath
