multi-module with example

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -3,10 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.camunda.consulting.simulator.simulator</groupId>
-	<artifactId>camunda-bpm-simulator</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<parent>
+		<groupId>com.camunda.consulting</groupId>
+		<artifactId>camunda-bpm-simulator-root</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
 
+	<artifactId>camunda-bpm-simulator</artifactId>
 	<packaging>jar</packaging>
 
 	<name>Camunda BPM Simulator</name>
