--- a/example/src/main/resources/application.yaml
+++ b/example/src/main/resources/application.yaml
@@ -1,9 +1,10 @@
 spring.datasource:
-#  url: jdbc:h2:./camunda-db;DB_CLOSE_DELAY=-1;MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE
-#shareable h2 database: jdbc:h2:./camunda-db;DB_CLOSE_DELAY=-1;MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-  url: jdbc:postgresql://localhost/postgres
-  username: postgres
-  password: postgres
+  url: jdbc:h2:./camunda-db;DB_CLOSE_DELAY=-1;MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE
+  username: sa
+  password: sa
+#  url: jdbc:postgresql://localhost/postgres
+#  username: postgres
+#  password: postgres
 spring.h2.console.enabled: true
 camunda.bpm:
   admin-user:
